--- a/examples/experimental/cshapes/index.html
+++ b/examples/experimental/cshapes/index.html
@@ -7,6 +7,18 @@
     <style>
         body {margin: 0; font-family: sans-serif; width: 100vw; height: 100vh; overflow: hidden;}
         .tooltip {pointer-events: none; position: absolute; z-index: 9; font-size: 12px; padding: 8px; background: #000; color: #fff; min-width: 160px; max-height: 240px; overflow-y: hidden;}
+
+        #options {
+            position: fixed;
+            z-index: 1;
+            background: #fff;
+            top: 0;
+            left: 0;
+            margin: 20px;
+            padding: 12px;
+            font-size: 11px;
+            box-shadow: 0 0 8px rgba(0,0,0,0.3);
+        }
     </style>
 </head>
 <body>
