--- a/examples/experimental/cshapes/index.html
+++ b/examples/experimental/cshapes/index.html
@@ -19,6 +19,10 @@
             font-size: 11px;
             box-shadow: 0 0 8px rgba(0,0,0,0.3);
         }
+
+        .timeslider {
+            width: 320px;
+        }
     </style>
 </head>
 <body>
