--- a/examples/experimental/rfe/index.html
+++ b/examples/experimental/rfe/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>GeoEPR</title>
+    <title>GROWup RFE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {margin: 0; font-family: sans-serif; width: 100vw; height: 100vh; overflow: hidden;}
