--- a/examples/experimental/rfe/index.html
+++ b/examples/experimental/rfe/index.html
@@ -5,8 +5,19 @@
     <title>GROWup RFE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        body {margin: 0; font-family: sans-serif; width: 100vw; height: 100vh; overflow: hidden;}
+        body {margin: 0; font-family: sans-serif; width: 100vw; height: 100vh; overflow: hidden; background-color: black}
         .tooltip {pointer-events: none; position: absolute; z-index: 9; font-size: 12px; padding: 8px; background: #000; color: #fff; min-width: 160px; max-height: 240px; overflow-y: hidden;}
+
+        .caption {
+            position: absolute;
+            font-family: sans-serif;
+            color: rgba(255, 255, 255, 0.71);
+            font-size: 82px;
+            right: 0;
+            left: 0;
+            top: 230px;
+            bottom: 0;
+            text-align: center;        }
 
         #options {
             position: fixed;
