GeoEPR example (SNF 2019)

--- a/examples/experimental/rfe/index.html
+++ b/examples/experimental/rfe/index.html
@@ -15,9 +15,10 @@
             font-size: 82px;
             right: 0;
             left: 0;
-            top: 230px;
+            top: 600px;
             bottom: 0;
-            text-align: center;        }
+            text-align: center;
+        }
 
         #options {
             position: fixed;
