--- a/examples/experimental/rfe/index.html
+++ b/examples/experimental/rfe/index.html
@@ -12,10 +12,10 @@
             position: absolute;
             font-family: sans-serif;
             color: rgba(255, 255, 255, 0.71);
-            font-size: 82px;
+            font-size: 42px;
             right: 0;
             left: 0;
-            top: 600px;
+            top: 80vh;
             bottom: 0;
             text-align: center;
         }
