--- a/examples/experimental/rfe/index.html
+++ b/examples/experimental/rfe/index.html
@@ -13,11 +13,11 @@
             font-family: sans-serif;
             color: rgba(255, 255, 255, 0.71);
             font-size: 42px;
-            right: 0;
-            left: 0;
-            top: 80vh;
+            right: 3%;
+            left: 3%;
+            top: 90vh;
             bottom: 0;
-            text-align: center;
+            text-align: left;
         }
 
         #options {
